# distributed-tracing-project

./: Makefile  README.md  docker-compose.yml  pyproject.toml
gateway/: Dockerfile  app.py  requirements.txt
service_a/: Dockerfile  app.py
service_b/: Dockerfile  app.py
